etherium account created

--- a/private-chain/public_static/index.html
+++ b/private-chain/public_static/index.html
@@ -7,7 +7,7 @@
         <form action="addInt" method="POST">
             <input type="number" name="_a">
             <input type="number" name="_b">
-            <input type="text" name="_account_token" value="0x32B320475245069F7D629785882F5F704cE22196" hidden>
+            <input type="text" name="_account_token" value="" hidden>
             <input type="submit" name="submit">
         </form>
     </body>
